[admin-page] handle category view done

--- a/admin-page/views/category/category.ejs
+++ b/admin-page/views/category/category.ejs
@@ -31,6 +31,7 @@
                         <th>ID</th>
                         <th>Tên Loại Sản Phẩm</th>
                         <th>Số Sản Phẩm Tương Ứng</th>
+                        <th>Chi Tiết</th>
                         <th>Cập Nhật</th>
                         <th>Xóa</th>
                       </tr>
