--- a/admin-page/views/common/preheader.ejs
+++ b/admin-page/views/common/preheader.ejs
@@ -68,6 +68,7 @@
         .modal {
             text-align: center;
             padding: 0 !important;
+            overflow-y:auto;
         }
 
         .modal:before {
